# python-cgm

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  publish-to-pypi.yml
LICENSES/: BSD-3-Clause.txt
cgm/: __init__.py  cli.py  common.py  errors.py  extract.py  hotspots.py  parser.py  raster.py  raw_images.py  rendering.py  snapshots.py  types.py
cgm/extract/: __init__.py  core.py  data_json.py  hotspots.py  raster.py  svg.py  tiles.py
cgm/parser/: __init__.py  binary.py  constants.py  text.py
tests/: test_cli.py  test_extract.py  test_parser.py
